--- a/StarWarsAPI/Base.lproj/Main.storyboard
+++ b/StarWarsAPI/Base.lproj/Main.storyboard
@@ -19,32 +19,23 @@
                             <view contentMode="scaleToFill" misplaced="YES" id="jfN-nB-skb">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4fg-0s-FyV">
-                                        <rect key="frame" x="277" y="16" width="71" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Refrescar"/>
-                                        <connections>
-                                            <action selector="btnRefreshPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MXS-ME-UbB"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qRb-T5-eWI">
-                                <rect key="frame" x="0.0" y="71" width="375" height="51"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="kHl-nN-fs5">
+                                <rect key="frame" x="0.0" y="71" width="375" height="596"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="K2W-E9-a20"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="BZD-Fb-XXY"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="2PG-EI-Plc"/>
                     <connections>
-                        <outlet property="btnRefresh" destination="4fg-0s-FyV" id="sZl-kw-6r6"/>
-                        <outlet property="lblName" destination="qRb-T5-eWI" id="i1c-BC-7fF"/>
+                        <outlet property="tableView" destination="kHl-nN-fs5" id="jcS-94-rPx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
